--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "btoa": "^1.2.1",
     "express": "^4.17.1",
+    "http-status": "^1.4.1",
+    "jsend": "^1.1.0",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
