--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.6.0",
     "firebase": "^7.5.0",
     "react": "^16.10.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2"
